# uuidcat

./: .gitignore  README.md  pyproject.toml
examples/: simple.py  uuid_wrapper.py
tests/: test_uuidcat.py
uuidcat/: category.py  category_provider.py  uuidcat.py
