[project]
name = "uuidcat"
version = "0.1.0"
description = "UUID with categories"
authors = [
    {name = "Ryan", email = "rhorman@nvee.ai"},
    {name = "Martin", email = "mgibson@nvee.ai"}
]
license = "UNLICENSE"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)"
]

[tool.poetry]
packages = [{include = "uuidcat"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
